force-app/main/default/objects/Volunteer_Program__c/Volunteer_Program__c.object-meta.xml
<CustomObject>
    <label>Volunteer Program</label>
    <nameField>
        <label>Volunteer Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>