force-app/main/default/objects/Volunteer_Program__c/fields/MaxVolunteers__c.field-meta.xml
<CustomField>
    <fullName>MaxVolunteers__c</fullName>
    <label>Max Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>