force-app/main/default/objects/Volunteer_Program__c/fields/ProgramCategory__c.field-meta.xml
<CustomField>
    <fullName>ProgramCategory__c</fullName>
    <label>Program Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>