force-app/main/default/objects/Volunteer_Program__c/fields/ProgramLocation__c.field-meta.xml
<CustomField>
    <fullName>ProgramLocation__c</fullName>
    <label>Program Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>